# demi-website

./: .dockerignore  .gitignore  README.md  deploy.ps1  dockerfile  fly.toml  package-lock.json
.github/workflows/: fly.yml
backend/: .gitignore  Cargo.toml  Rocket.toml  procfile
backend/src/: doc_filters.rs  main.rs
backend/static/docs/: pages.json
backend/static/docs/basics/: variables.md
backend/static/docs/getting-started/: first-program.md  getting-started.md  installation.md  introduction.md
backend/static/docs/test/: test.md
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: global.css  index.tsx
frontend/src/Components/Buttons/: Button.css  DownloadButton.tsx
frontend/src/Components/Footer/: Footer.css  Footer.tsx
frontend/src/Components/Layout/: Layout.tsx
frontend/src/Components/Navbar/: Button.tsx  Dropdown.tsx  MenuItems.ts  Navbar.css  Navbar.tsx  SearchBar.css  SearchBar.tsx
frontend/src/Components/doc-sidebar/: DocSideBar.tsx
frontend/src/Routes/: routes.tsx
frontend/src/Routes/About/: About.tsx
frontend/src/Routes/Contact/: Contact.tsx
frontend/src/Routes/Downloads/: Downloads.css  Downloads.tsx
frontend/src/Routes/Errors/: ErrorNotFound.tsx  Errors.css
frontend/src/Routes/Index/: Index.css  Index.tsx
frontend/src/Routes/docs/: DocPage.css  DocPage.tsx  Highlighting.css  Search.css  Search.tsx
frontend/src/helpers/: helpers.ts
