[package]
name = "backend"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown-meta-parser = "0.1.3"
rocket = { version = "=0.5.0-rc.3", features = ["secrets", "json"] }
rocket_contrib = "0.4.11"
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
walkdir = "2.4.0"
